[gd_scene load_steps=5 format=3 uid="uid://berbl448a1x3l"]

[ext_resource type="PackedScene" uid="uid://t3h3netp87vt" path="res://Scenes/Level.tscn" id="1_0lyvi"]
[ext_resource type="Script" path="res://Script/Main.gd" id="1_ah8rq"]
[ext_resource type="PackedScene" uid="uid://de7r8kp3bfjnc" path="res://Scenes/Player/PlayerScene.tscn" id="2_teoy4"]
[ext_resource type="PackedScene" uid="uid://b23k4d4506cfi" path="res://Scenes/UI/MainMenu.tscn" id="3_7dye1"]

[node name="Main" type="Node"]
script = ExtResource("1_ah8rq")

[node name="MainMenuCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MainMenu" parent="MainMenuCanvasLayer" instance=ExtResource("3_7dye1")]

[node name="SubViewportC" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportC"]
handle_input_locally = false
size = Vector2i(1142, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Level" parent="SubViewportC/SubViewport" instance=ExtResource("1_0lyvi")]

[node name="CharacterBody2D" parent="SubViewportC/SubViewport/Level" instance=ExtResource("2_teoy4")]
position = Vector2(100, 100)
